--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,10 @@
-{
-    "configurations": [
-        {
-            "name": "Launch Microsoft Edge and open the Edge DevTools",
-            "request": "launch",
-            "type": "vscode-edge-devtools.debug",
-            "url": "" // Provide your project's url to finish configuring
-        }
-    ]
-}
+// {
+//     "configurations": [
+//         {
+//             "name": "Launch Microsoft Edge and open the Edge DevTools",
+//             "request": "launch",
+//             "type": "vscode-edge-devtools.debug",
+//             "url": "" // Provide your project's url to finish configuring
+//         }
+//     ]
+// }
